force-app/main/default/objects/Close_Out_Database__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Assigned_User__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Assigned_User__c</referenceTo>
        <relationshipLabel>Step 31: Close Out Statistic</relationshipLabel>
        <relationshipName>Step_31_Close_Out_Statistic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BE_Cost_Estimate_File__c</fullName>
        <label>BE Cost Estimate File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_WP_16_ID__c</fullName>
        <label>BE WP 16 ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Out_Statistic_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required</inlineHelpText>
        <label>Close Out Statistic File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Estimate_File_URL__c</fullName>
        <formula>IF(BE_Cost_Estimate_File__c == null, &quot;No File&quot; ,HYPERLINK(BE_Cost_Estimate_File__c, &quot;Open File&quot;,&quot;_self&quot;))</formula>
        <label>Cost Estimate File URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsWaitingForPreviousStep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsWaitingForPreviousStep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Id, &quot;Close Out Statistic&quot;,&quot;_self&quot;)</formula>
        <label>Work Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <defaultValue>31</defaultValue>
        <label>No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required If have no Close out Static File</inlineHelpText>
        <label>Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Close_Out_Database</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SME</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected User is not SME. Please select SME user.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>PM</value>
            </filterItems>
            <infoMessage>Please select SME user.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Step_31_Close_Out_Database</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submit_Status__c</fullName>
        <label>Submit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Submit_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiting_for_Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting for Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Process_Status__c</fullName>
        <label>Work Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Work_Process_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Step 31 : Close Out Statistic</label>
    <nameField>
        <displayFormat>WP31-{00000}</displayFormat>
        <label>Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Step_31_After_Submit</fullName>
        <active>true</active>
        <label>Step 31 : After Submit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Step_31_Before_Submit</fullName>
        <active>true</active>
        <label>Step 31 : Before Submit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>